--- a/BlogTravelWebApp/package.json
+++ b/BlogTravelWebApp/package.json
@@ -24,9 +24,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-icon": "^1.1.2",
+    "angular-svg-icon": "^4.2.0",
     "angular2-froala-wysiwyg": "^2.6.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "ngx-chips": "^1.5.0",
+    "ngx-facebook": "^2.4.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -37,6 +42,7 @@
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.11",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
