--- a/BlogTravelWebApp/package.json
+++ b/BlogTravelWebApp/package.json
@@ -26,11 +26,15 @@
     "@angular/router": "^4.0.0",
     "angular-icon": "^1.1.2",
     "angular-svg-icon": "^4.2.0",
+    "angular2-disqus": "^6.1.1",
     "angular2-froala-wysiwyg": "^2.6.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "material-social-share": "^1.0.5",
+    "ng2-social-share": "0.0.10",
     "ngx-chips": "^1.5.0",
+    "ngx-disqus": "^2.1.1",
     "ngx-facebook": "^2.4.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
