--- a/BlogTravelWebApp/package.json
+++ b/BlogTravelWebApp/package.json
@@ -36,6 +36,7 @@
     "ngx-chips": "^1.5.0",
     "ngx-disqus": "^2.1.1",
     "ngx-facebook": "^2.4.0",
+    "ngx-pagination": "^3.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
