--- a/BlogTravelWebApp/package.json
+++ b/BlogTravelWebApp/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngx-share/core": "^6.0.1",
+    "angular-autofocus-fix": "^0.1.0",
     "angular-icon": "^1.1.2",
     "angular-svg-icon": "^4.2.0",
     "angular2-disqus": "^6.1.1",
@@ -31,12 +33,14 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "jw-angular-social-buttons": "0.0.1",
     "material-social-share": "^1.0.5",
     "ng2-social-share": "0.0.10",
     "ngx-chips": "^1.5.0",
     "ngx-disqus": "^2.1.1",
     "ngx-facebook": "^2.4.0",
     "ngx-pagination": "^3.1.0",
+    "ngx-sharebuttons": "^3.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
