--- a/BlogTravelWebApp/package.json
+++ b/BlogTravelWebApp/package.json
@@ -35,6 +35,7 @@
     "jquery": "^3.2.1",
     "jw-angular-social-buttons": "0.0.1",
     "material-social-share": "^1.0.5",
+    "ng-animate": "^0.3.3",
     "ng2-social-share": "0.0.10",
     "ngx-chips": "^1.5.0",
     "ngx-disqus": "^2.1.1",
@@ -62,7 +63,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
