--- a/BlogTravelWebApp/package.json
+++ b/BlogTravelWebApp/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@greg-md/ng-facebook": "^1.2.5",
+    "@ngu/carousel": "^1.4.8",
     "@ngx-share/core": "^6.0.1",
     "angular-autofocus-fix": "^0.1.0",
     "angular-icon": "^1.1.2",
