--- a/API/package.json
+++ b/API/package.json
@@ -16,7 +16,8 @@
     "http": "0.0.0",
     "jsonwebtoken": "^7.4.0",
     "md5": "^2.2.1",
-    "mongoose": "^4.13.14"
+    "mongoose": "^4.13.14",
+    "sendgrid": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
